Fix flick keyboard alignment using CSS Grid

--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ html, body {
     text-align: center;
 }
 body {
-    padding: 5px 20px; /* 上下を20pxから5pxへ */
+    padding: -50px 20px; /* 上下を20pxから5pxへ */
     background-color: #f4f7f6;
     display: flex;
     flex-direction: column;
